// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works - grid-auto-rows 1`] = `
.c0 {
  display: grid;
  grid-auto-rows: minmax(100px,auto);
}

<div
  className="c0"
/>
`;

exports[`it works - grid-gap 1`] = `
.c0 {
  display: grid;
  grid-gap: 10px;
}

<div
  className="c0"
/>
`;

exports[`it works - templateColumns 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(3,1fr);
}

<div
  className="c0"
/>
`;

exports[`it works 1`] = `
.c0 {
  display: grid;
}

<div
  className="c0"
/>
`;
